--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="section {{ config.extra.paralax.colorscheme.font.three }}">
+		<div class="section {{ config.extra.paralax.colorscheme.background.three }}">
 			<div class="row">
 				<div class="col s12 m4">
 					<div class="icon-block">
@@ -95,7 +95,7 @@
 	</div>
 
 	<div class="container">
-		<div class="section {{ config.extra.paralax.colorscheme.font.three }}">
+		<div class="section {{ config.extra.paralax.colorscheme.background.three }}">
 			<div class="row">
 				<div class="col s12 center">
 					<h3><i class="mdi-content-send {{ config.extra.paralax.colorscheme.font.two }}-text"></i></h3>
