refractored paralax out of the index.html

--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 
 {% block title %}
 	<title>categories - {{ config.title }}</title>
@@ -8,7 +8,7 @@
 	<meta name="description" content="{{ config.description }}">
 	<meta property="og:title" content="categories - {{ config.title }}">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="{{ config.extra.paralax.logo }}">
+	<meta property="og:image" content="{{ config.extra.materialize.logo }}">
 	<meta property="og:url" content="{{ current_url }}">
 	<meta property="og:description" content="{{ config.description }}">
 	<meta property="og:site_name" content="{{ config.title }}">
