disabled all styles (WIP)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,19 @@
-/* Custom Stylesheet */
-/**
- * Use this file to override Materialize files so you can update
- * the core Materialize files in the future
- *
- * Made By MaterializeCSS.com
- */
-
-nav ul a,
+/*nav ul a,
 nav .brand-logo {
   color: #444;
 }
-
+*/
+/*
+#root{
+  width: 100%;
+  float: left;
+}
+#sidebar {
+  width: 300px;
+  float: left;
+}
+*/
+/*
 p {
   line-height: 2rem;
 }
@@ -18,32 +21,9 @@ p {
 .button-collapse {
   color: #26a69a;
 }
+*/
 
-.parallax-container {
-  min-height: 380px;
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
-}
-  .parallax-container .section {
-    width: 100%;
-  }
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
-}
-
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
-}
+/*
 
 .icon-block {
   padding: 0 15px;
@@ -55,7 +35,8 @@ p {
 footer.page-footer {
   margin: 0;
 }
-
+*/
+/*
 .content {
   margin: 0 auto;
   width: 100%;
@@ -71,7 +52,8 @@ footer.page-footer {
   padding-right: 1rem;
   margin: 0 auto;
 }
-* Code */
+*/
+/*
 code,
 pre {
   font-family: Menlo, Monaco, "Courier New", monospace;
@@ -110,7 +92,6 @@ pre code {
   margin-bottom: 0;
 }
 
-/* Quotes */
 blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
@@ -127,43 +108,8 @@ blockquote p:last-child {
   }
 }
 
-/*
- * Container
- *
- * Center the page content.
- */
-
-.container {
-  max-width: 38rem;
-  padding-left:  1rem;
-  padding-right: 1rem;
-  margin-left:  auto;
-  margin-right: auto;
-}
-
-
-
-.content {
-  padding-top:    4rem;
-  padding-bottom: 4rem;
-}
-
-@media (min-width: 48em) {
-  .content {
-    max-width: 38rem;
-    margin-left: 20rem;
-    margin-right: 2rem;
-  }
-}
-
-@media (min-width: 64em) {
-  .content {
-    margin-left: 22rem;
-    margin-right: 4rem;
-  }
-}
-
+*/
 .icon {
-    width:36px;
+    width:32px;
     height:42px;
 }
