--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,114 +1,12 @@
-/*nav ul a,
-nav .brand-logo {
-  color: #444;
+header{
+  margin-left:300px;
 }
-*/
-/*
-#root{
-  width: 100%;
-  float: left;
+main {
+  margin-left:300px;
 }
-#sidebar {
-  width: 300px;
-  float: left;
+footer{
+  margin-left:300px;
 }
-*/
-/*
-p {
-  line-height: 2rem;
-}
-
-.button-collapse {
-  color: #26a69a;
-}
-*/
-
-/*
-
-.icon-block {
-  padding: 0 15px;
-}
-.icon-block .material-icons {
-  font-size: inherit;
-}
-
-footer.page-footer {
-  margin: 0;
-}
-*/
-/*
-.content {
-  margin: 0 auto;
-  width: 100%;
-  float: none;
-  display: initial;
-}
-
-.container {
-  width: 100%;
-  float: none;
-  display: initial;
-  padding-left:  1rem;
-  padding-right: 1rem;
-  margin: 0 auto;
-}
-*/
-/*
-code,
-pre {
-  font-family: Menlo, Monaco, "Courier New", monospace;
-}
-code {
-  padding: .25em .5em;
-  font-size: 85%;
-  color: #bf616a;
-  background-color: #f9f9f9;
-  border-radius: 3px;
-}
-pre {
-  display: block;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  padding: 1rem;
-  font-size: .8rem;
-  line-height: 1.4;
-  white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #f9f9f9;
-}
-pre code {
-  padding: 0;
-  font-size: 100%;
-  color: inherit;
-  background-color: transparent;
-}
-.highlight {
-  margin-bottom: 1rem;
-  border-radius: 4px;
-}
-.highlight pre {
-  margin-bottom: 0;
-}
-
-blockquote {
-  padding: .5rem 1rem;
-  margin: .8rem 0;
-  color: #7a7a7a;
-  border-left: .25rem solid #e5e5e5;
-}
-blockquote p:last-child {
-  margin-bottom: 0;
-}
-@media (min-width: 30em) {
-  blockquote {
-    padding-right: 5rem;
-    padding-left: 1.25rem;
-  }
-}
-
-*/
 .icon {
     width:32px;
     height:42px;
