--- a/templates/categories.html
+++ b/templates/categories.html
@@ -15,13 +15,16 @@
 {% endblock meta %}
 
 {% block main %}
-	{% for category in categories %}
-		<header class="PostHeader">
-			<h1 class="PostHeader__title"><a href="/categories/{{ category.slug }}">{{ category.name }}</a></h1>
-			<p class="PostHeader__info">
-				{{ category.pages | length }} post{{ category.pages | length | pluralize }}
-			</p>
-		</header>
-	{% endfor %}
+    <h1>Categories</h1>
+    <h2>&nbsp;</h2>
+	<ul class="collection">
+		{% for category in categories %}
+			<li class="collection-item">
+				<a class="title" href="/categories/{{ category.slug }}">Category: {{ category.name }}</a>
+				<p>
+					{{ category.pages | length }} post{{ category.pages | length | pluralize }}
+				</p>
+			</li>
+		{% endfor %}
+	</ul>
 {% endblock main %}
-
