--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,24 +1,39 @@
 {% macro post_header(page) %}
-	<header class="PostHeader">
-		<h1 class="PostHeader__title">
-			<a href="{{ page.permalink }}">
-				{{ page.title }}
-			</a>
-		</h1>
-		<p class="PostHeader__info">
+	<h1>
+		<a class="title" href="{{ page.permalink }}">
+			{{ page.title }} 
+		</a>
+	</h1>
+	<h2>{{ page.description }}</h2>
+	({{ page.reading_time + 1}} minutes read)
+	<div class="row">
+		<div class="col s3">
+			{% if page.category %}
+				Category: 
+				<span class="badge">
+					<a class="title" href="/categories/{{ page.category }}">{{ page.category }}</a>
+				</span>
+			{% endif %}
+		</div>
+		<div class="col s3">
+			{% if page.tags %}
+				Tags: 
+				{% for tag in page.tags %}
+					<span class="badge">
+						<a href="{{ get_url(path="tags") }}{{ tag | slugify }}">{{ tag }}</a>
+					</span>
+				{% endfor %}
+			{% endif %}
+		</div>
+		<div class="col s3">
 			{% if page.date %}
-				<a class="PostHeader__timestamp" href="{{ page.permalink }}">
+				Date:
+				<a class="title" href="{{ page.permalink }}">
 					<time datetime="{{ page.date }}">
 						{{ page.date | date(format="%B %e, %Y") }}
 					</time>
 				</a>
 			{% endif %}
-			{% if page.tags %}
-				{% for tag in page.tags %}
-					&bull;
-					<a href="{{ get_url(path="tags") }}{{ tag | slugify }}">{{ tag }}</a>
-				{% endfor %}
-			{% endif %}
-		</p>
-	</header>
+		</div>
+	</div>
 {% endmacro post_header %}
