--- a/templates/base.html
+++ b/templates/base.html
@@ -135,9 +135,9 @@
 		</div>
 	</footer>
 
-	<script src="/js/jquery-2.1.1.min.js"></script>
-	<script src="/js/materialize.min.js"></script>
-	<script src="/js/init.js"></script>
+	<script type="text/javascript" src="/js/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="/js/materialize.min.js"></script>
+	<script type="text/javascript" src="/js/init.js"></script>
 	{% if config.extra.materialize.social.ga %}
 	<script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
