--- a/templates/macros.html
+++ b/templates/macros.html
@@ -5,7 +5,9 @@
 		</a>
 	</h1>
 	<h2>{{ page.description }}</h2>
-	({{ page.reading_time + 1}} minutes read)
+	{% if page.extra.show_read_time %}
+		({{ page.reading_time + 1}} minutes read)
+	{% endif %}
 	<div class="row">
 		<div class="col s3">
 			{% if page.category %}
