--- a/templates/base.html
+++ b/templates/base.html
@@ -20,12 +20,12 @@
 		<title>{{ config.title }}</title>
 	{% endblock title %}
 	<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link type="text/css" rel="stylesheet" href="{{ get_url(path="/css/materialize.css") }}" media="screen,projection"/>
-	<link rel="icon" type="image/png" sizes="192x192" href="{{ get_url(path="favicon-192x192.png") }}">
-	<link rel="icon" type="image/png" sizes="128x128" href="{{ get_url(path="favicon-128x128.png") }}">
-	<link rel="manifest" href="{{ get_url(path="manifest.json") }}">
+	<link type="text/css" rel="stylesheet" href="{{ get_url(path="/css/materialize.css", trailing_slash=false) }}" media="screen,projection"/>
+	<link rel="icon" type="image/png" sizes="192x192" href="{{ get_url(path="favicon-192x192.png", trailing_slash=false) }}">
+	<link rel="icon" type="image/png" sizes="128x128" href="{{ get_url(path="favicon-128x128.png", trailing_slash=false) }}">
+	<link rel="manifest" href="{{ get_url(path="manifest.json", trailing_slash=false) }}">
 	{% if config.generate_rss %}
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="{{ get_url(path="rss.xml") }}">
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="{{ get_url(path="rss.xml", trailing_slash=false) }}">
 	{% endif %}
 
 	{% block extra_head %}
@@ -122,7 +122,7 @@
 					</div>
 					<div class="col s3">
 						{% if config.generate_rss %}
-							<a class="{{ config.extra.materialize.colorscheme.font.three }}-text text-light" href="{{ get_url(path="rss.xml") }}">
+							<a class="{{ config.extra.materialize.colorscheme.font.three }}-text text-light" href="{{ get_url(path="rss.xml", trailing_slash=false) }}">
 								RSS
 								<!--svg class="icon icon-rss" viewBox="0 0 24 28" aria-hidden="true">
 									<path d="M19.199 24C19.199 13.467 10.533 4.8 0 4.8V0c13.165 0 24 10.835 24 24h-4.801zM3.291 17.415c1.814 0 3.293 1.479 3.293 3.295 0 1.813-1.485 3.29-3.301 3.29C1.47 24 0 22.526 0 20.71s1.475-3.294 3.291-3.295zM15.909 24h-4.665c0-6.169-5.075-11.245-11.244-11.245V8.09c8.727 0 15.909 7.184 15.909 15.91z"/>
@@ -135,9 +135,9 @@
 		</div>
 	</footer>
 
-	<script type="text/javascript" src="/js/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="/js/materialize.min.js"></script>
-	<script type="text/javascript" src="/js/init.js"></script>
+	<script type="text/javascript" src="{{ get_url(path="/js/jquery-2.1.1.min.js", trailing_slash=false) }}"></script>
+	<script type="text/javascript" src="{{ get_url(path="/js/materialize.min.js", trailing_slash=false) }}"></script>
+	<script type="text/javascript" src="{{ get_url(path="/js/init.js", trailing_slash=false) }}"></script>
 	{% if config.extra.materialize.social.ga %}
         <script async src="https://www.googletagmanager.com/gtag/js?id={{ config.extra.materialize.social.ga }}"></script>
         <script>
